# classtop

./: .gitignore  Build.ps1  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTEGRATION_SUMMARY.md  INTEGRATION_TEST_GUIDE.md  PR33_FIXES_SUMMARY.md  README.md  SUBPROJECT_REVIEW_SUMMARY.md  TESTING_PROGRESS_REPORT.md  TEST_COVERAGE_REPORT.md  build.sh  commitlint.config.js  package-lock.json  package.json  start.sh
.claude/: settings.local.json
.claude/agents/: backend-engineer.md  docs-devops-engineer.md  integration-engineer.md  vue-frontend-engineer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  release.yml
.husky/: pre-commit
docs/: CLIENT_ADAPTATION.md  CPP_PLUGIN_GUIDE.md  DOCUMENTATION_STANDARDS.md  MANAGEMENT_SERVER_TESTING.md  NAMED_PIPES_IPC_DESIGN.md  PLUGIN_IPC_SPECIFICATION.md  PYTHON_PLUGIN_GUIDE.md  RELEASE_SIGNING_GUIDE.md  VERIFY_SIGNATURES.md
examples/: README.md
examples/cpp_plugins/hello_world/: CMakeLists.txt  README.md  plugin.yaml
examples/cpp_plugins/hello_world/include/: plugin.h
examples/cpp_plugins/hello_world/src/: plugin.cpp
examples/cpp_plugins/performance_monitor/: CMakeLists.txt  README.md  plugin.yaml
examples/cpp_plugins/performance_monitor/include/: plugin.h
examples/cpp_plugins/performance_monitor/src/: plugin.cpp
examples/cpp_plugins/simple_data_processor/: CMakeLists.txt  README.md  plugin.yaml
examples/cpp_plugins/simple_data_processor/include/: plugin.h
examples/cpp_plugins/simple_data_processor/src/: plugin.cpp
examples/python_plugins/course_statistics/: README.md  plugin.py  plugin.yaml  plugin_ui.js
examples/python_plugins/hello_world/: README.md  plugin.py  plugin.yaml
examples/python_plugins/schedule_export/: README.md  plugin.py  plugin.yaml  plugin_ui.js
src/: App.vue  Main.vue
src-tauri/: .coverage  Cargo.toml  TESTING_GUIDE.md  coverage.xml  pyproject.toml  tauri.bundle.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/tauri_app/: __init__.py  commands.py  db.py  events.py  logger.py  schedule_manager.py  settings_manager.py  statistics_manager.py  sync_client.py  tray.py
src-tauri/python/tauri_app/audio_manager/: microphone.py  system_audio.py
src-tauri/tests/: conftest.py  test_commands.py  test_db.py  test_events.py  test_schedule_manager.py  test_settings_manager.py  test_sync_client.py  test_sync_history.py  test_sync_integration.py
src/TopBar/: TopBar.vue
src/TopBar/components/: Schedule.vue
src/pages/: AudioMonitor.vue  Settings.vue  Statistics.vue
src/router/: index.js
src/utils/: globalVars.js  schedule.js  theme.js  topbarThemes.js
templates/cmake_cpp_plugin/: CMakeLists.txt  README.md  plugin.yaml
templates/cmake_cpp_plugin/include/: plugin.h
templates/cmake_cpp_plugin/src/: plugin.cpp
templates/visual_studio_cpp_plugin/: ClassTopPlugin.vcxproj  README.md  plugin.yaml
templates/visual_studio_cpp_plugin/include/: plugin.h
templates/visual_studio_cpp_plugin/src/: plugin.cpp
