[package]
name = "classtop"
version = "0.1.0"
description = "Useful utilities for your class"
authors = ["HwlloChen", "Amiya167"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# the same as the package name
name = "classtop"
path = "src/main.rs"
required-features = ["pytauri/standalone"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "classtop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.25" }
pytauri = { version = "0.8" }
tauri-plugin-pytauri = { version = "0.8" }
tauri-plugin-clipboard-manager = "2"

# Force update glib to fix security vulnerability GHSA-wrw7-89jp-8q8g
# Only needed on Linux platforms (GTK/WebKit dependency)
[target.'cfg(target_os = "linux")'.dependencies]
glib = { version = "0.20" }

[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
