[project]
name = "classtop"  
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "pytauri == 0.8.*",
    "pydantic == 2.*",
    "anyio == 4.*",
    "pyyaml",
    "loguru",
    "pillow",
    "aiohttp-cors",
    "fastapi",
    "uvicorn[standard]",
    "pygrabber",
    "opencv-python",
    "sounddevice",
    "numpy",
    "pycaw",
    "comtypes",
    "requests",  # For Management Server sync
]  

[project.entry-points.pytauri]
ext_mod = "classtop.ext_mod"

[build-system]
requires = ["setuptools >= 80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["python"] }